# aibrix-tenant-gateway

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  container.yml
config/: tenants.yaml
config/templates/: tenants.aws-danger.yaml.tpl
docs/: 00-problem.md  01-architecture.md  02-threat-model.md  03-tenant-isolation-modes.md  04-aws-eks-reference.md  05-limitations.md  06-roast-review.md  07-production-hardening-implementation-plan.md  08-implemented-hardening.md  09-aws-demo-runbook.md  10-aws-production-path.md  11-aws-full-stack-danger-zone.md  12-danger-zone-production-gaps.md  13-danger-zone-audit-fixes.md  14-external-audit-brief.md  15-security-controls-matrix.md  16-known-production-blockers.md  17-auditor-response-plan.md  18-hardening-pr8-implementation.md  19-pr9-audit-remediation.md  20-pr10-core-hardening.md  README.md
examples/: cross-tenant-denied.sh  forbidden-lora-denied.sh  spoofed-header-denied.sh  spoofed-header-ignored.sh  tenant-a-valid.sh  tenant-b-valid.sh
k8s/aibrix/: aibrix-facing-service-placeholder.yaml
k8s/gateway-api/: gateway.yaml  httproute-tenant-a.yaml  httproute-tenant-b.yaml
k8s/security/: istio-mtls-placeholders.yaml  otel-collector-reference.yaml
k8s/tenant-policy-gateway/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  resourcequota.yaml  secret-oidc-placeholder.yaml  service.yaml  serviceaccount.yaml
k8s/tenants/: networkpolicies.yaml  resourcequotas.yaml
scripts/aws-danger/: 00-check-danger-prereqs.sh  lib.sh  (+14 more)
(+33 files in other folders)
